<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:id="@+id/menu_logo"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="@dimen/icon_margin_bottom"
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_popcorn"/>

        <com.example.biladoniga_toscanini_tejerina.utils.TeamButton
            android:id="@+id/first_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/first_team"
            />

        <com.example.biladoniga_toscanini_tejerina.utils.TeamButton
            android:id="@+id/second_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/second_team"
            />

        <com.example.biladoniga_toscanini_tejerina.utils.TeamButton
            android:id="@+id/third_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/third_team"
            />
    </LinearLayout>

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        style="@style/StartButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
