<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".game.views.PickMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_show"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:elevation="@dimen/card_elevation"
        android:background="@drawable/card_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/start_show_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MovieTitleTextStyle"
            android:paddingStart="@dimen/margin_10dp"
            android:paddingEnd="@dimen/margin_10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/movie_image"/>

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="@dimen/movie_image_size"
            android:layout_height="@dimen/movie_image_size"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_hide"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:elevation="@dimen/card_elevation"
        android:background="@drawable/card_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/start_show_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="@dimen/card_icon_size"
            android:layout_height="@dimen/card_icon_size"
            android:background="@drawable/ic_question_mark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/card_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/InstructionTextStyle"
        android:text="@string/card_hide_instructions"
        app:layout_constraintTop_toBottomOf="@id/card_hide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/start_show_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_show"
        android:layout_marginBottom="@dimen/margin_10dp"
        style="@style/StartButtonStyle"
        app:layout_constraintBottom_toTopOf="@id/change_movie_button"/>

    <Button
        android:id="@+id/change_movie_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_movie"
        style="@style/StartButtonInvertStyle"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
