<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/margin_50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/take_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/camera_background"
                    android:layout_width="@dimen/camera_image_background_size"
                    android:layout_height="@dimen/camera_image_background_size"
                    android:background="@drawable/rounded_corners_dotted_shape_line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/camera_icon"
                    android:layout_width="@dimen/camera_icon_size"
                    android:layout_height="@dimen/camera_icon_size"
                    android:background="@drawable/ic_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/teammates_image"
                    android:layout_width="@dimen/camera_image_background_size"
                    android:layout_height="@dimen/camera_image_background_size"
                    android:background="@color/black"
                    android:visibility="invisible"
                    app:shapeAppearanceOverlay="@style/RoundedBigImageViewStyle"
                    android:adjustViewBounds="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/teammates_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                app:layout_constraintTop_toBottomOf="@id/take_image_button">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_teammate_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_50dp"
                    android:hint="@string/teammate_name"
                    android:textColorHint="@color/gray_color"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    app:boxBackgroundColor="@null"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="@dimen/text_input_padding_top"
                    app:boxStrokeColor="@color/primary_color"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/primary_color"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_teammate_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helvetica_neue"
                        android:inputType="text"
                        android:textSize="@dimen/text_input_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/second_teammate_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:hint="@string/teammate_name"
                    android:textColorHint="@color/gray_color"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    app:boxBackgroundColor="@null"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="@dimen/text_input_padding_top"
                    app:boxStrokeColor="@color/primary_color"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/primary_color"
                    app:layout_constraintTop_toBottomOf="@id/first_teammate_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/second_teammate_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helvetica_neue"
                        android:inputType="text"
                        android:textSize="@dimen/text_input_size" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/create_team_cancel_button"
                style="@style/CheckButtonStyle"
                android:background="@drawable/rounded_corners_cancel_color"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/create_team_save_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teammates_names" />

            <Button
                android:id="@+id/create_team_save_button"
                style="@style/CheckButtonStyle"
                android:background="@drawable/rounded_corners_start_color"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/create_team_cancel_button"
                app:layout_constraintTop_toBottomOf="@id/teammates_names" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
